// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox demo -- checkbox 1`] = `
.c12 {
  vertical-align: baseline;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c34 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c34:last-child {
  margin-right: 0;
}

.c7 .c35+.c35 {
  margin-left: -1px;
}

.c7 .c33 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c33:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c33:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c27 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c29 .c26 {
  line-height: 28px;
  color: #c3cad9;
}

.c25 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c25 .c26 {
  line-height: 28px;
  color: #3555f6;
}

.c30 .c26 {
  line-height: 28px;
  color: #d9d9d9;
}

.c31 .c26 {
  line-height: 24px;
  color: #c3cad9;
}

.c32 .c26 {
  line-height: 32px;
  color: #c3cad9;
}

.c28 {
  display: inline-block;
  vertical-align: middle;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

.c24 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c24:hover {
  border-color: #3555f6;
}

.c24 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c24 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c24 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c24 .c17,
.c24 .c19 {
  line-height: 16px;
}

.c24 .c17 {
  padding-right: 20px;
}

.c24 .c19 {
  padding-left: 20px;
}

.c24 .c15 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c24 .c20 {
  left: 100%;
  margin-left: -19px;
}

.c24 .c22 {
  background: #9fecc0;
}

.c24 .c19 {
  display: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox c12"
              type="cbox"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox c12"
              type="cbox"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleTyle
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            default
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox c12"
              type="cbox"
            />
            card
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          checked=""
          class="c24"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c25"
    >
      <i
        class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox-ed c12"
        type="checkbox-ed"
      />
      <div
        class="uc-fe-checkbox-content c28"
      >
        checkbox
      </div>
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-checked 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  line-height: 28px;
  color: #c3cad9;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c5 .c1 {
  line-height: 28px;
  color: #3555f6;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        unchecked
      </div>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c5"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox-ed c3"
        type="checkbox-ed"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        checked
      </div>
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-disabled 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  line-height: 28px;
  color: #c3cad9;
}

.c6 .c1 {
  line-height: 28px;
  color: #3555f6;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
  color: #bbb;
  cursor: not-allowed;
}

.c5 .c1 {
  line-height: 28px;
  color: #d9d9d9;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        common
      </div>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c5"
      disabled=""
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        disabled=""
        type="checkbox"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        disabled
      </div>
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-size 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c5 .c1 {
  line-height: 28px;
  color: #c3cad9;
}

.c7 .c1 {
  line-height: 28px;
  color: #3555f6;
}

.c8 .c1 {
  line-height: 28px;
  color: #d9d9d9;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 24px;
  font-size: 12px;
}

.c0 .c1 {
  line-height: 24px;
  color: #c3cad9;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 32px;
  font-size: 12px;
}

.c6 .c1 {
  line-height: 32px;
  color: #c3cad9;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        checkbox
      </div>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c5"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        checkbox
      </div>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c6"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        checkbox
      </div>
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-styleType 1`] = `
.c3 {
  vertical-align: baseline;
}

.c7 {
  position: relative;
  padding: 8px 16px;
  line-height: 22px;
  min-height: 22px;
  font-weight: bold;
}

.c11 {
  padding: 16px;
  min-height: 20px;
}

.c9 {
  font-size: 16px;
  color: #c3cad9;
  position: absolute;
  right: 12px;
  top: 10px;
}

.c14 {
  font-weight: bold;
  line-height: 16px;
  position: absolute;
  right: 12px;
  top: 10px;
}

.c5 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
}

.c5:hover {
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32),0px 1px 0px 0px rgba(223,224,241,0.7);
  border-color: transparent;
}

.c5 .c6 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c5 .c8 {
  border-radius: 50%;
  background: white;
}

.c12 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
  border-color: #3555f6;
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32);
}

.c12 .c6 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c12 .c6 {
  color: #3555f6;
  border-color: #3555f6;
}

.c12 .c8 {
  color: #3555f6;
}

.c13 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
  cursor: not-allowed;
  border-color: #d9d9d9;
}

.c13 .c6 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c13 .c6 {
  background: #bbb;
  color: white;
}

.c13 .c10 {
  background: #f7f7f7;
  color: #bbb;
}

.c15 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
  border-color: #3555f6;
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32);
  cursor: not-allowed;
}

.c15 .c6 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c15 .c6 {
  color: #3555f6;
  border-color: #3555f6;
}

.c15 .c8 {
  color: #3555f6;
}

.c15 .c8 {
  color: #adbaf3;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  line-height: 28px;
  color: #c3cad9;
}

.c16 .c1 {
  line-height: 28px;
  color: #3555f6;
}

.c17 .c1 {
  line-height: 28px;
  color: #d9d9d9;
}

.c18 .c1 {
  line-height: 24px;
  color: #c3cad9;
}

.c19 .c1 {
  line-height: 32px;
  color: #c3cad9;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        checkbox
      </div>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c5"
      style="margin-right:8px;"
    >
      <div
        class="c6 c7"
      >
        title
        <i
          class="c8 c9 uc-fe-icon icon__checkbox c3"
          type="checkbox"
        />
      </div>
      <div
        class="c10 c11"
      >
        checkbox
      </div>
    </div>
    <div
      checked=""
      class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-undefined c12"
      style="margin-right:8px;"
    >
      <div
        class="c6 c7"
      >
        title
        <i
          class="c8 c9 uc-fe-icon icon__checkbox-ed c3"
          type="checkbox-ed"
        />
      </div>
      <div
        class="c10 c11"
      >
        checkbox
      </div>
    </div>
    <div
      class="uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-undefined c13"
      disabled=""
      style="margin-right:8px;"
    >
      <div
        class="c6 c7"
      >
        title
        <span
          class="c14"
        >
          售罄
        </span>
      </div>
      <div
        class="c10 c11"
      >
        checkbox
      </div>
    </div>
    <div
      checked=""
      class="uc-fe-radio uc-fe-radio-disabled uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-undefined c15"
      disabled=""
      style="margin-right:8px;"
    >
      <div
        class="c6 c7"
      >
        title
        <span
          class="c14"
        >
          必选
        </span>
      </div>
      <div
        class="c10 c11"
      >
        checkbox
      </div>
    </div>
    <div
      checked=""
      class="uc-fe-radio uc-fe-radio-disabled uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-undefined c15"
      disabled=""
      style="margin-right:8px;"
    >
      <div
        class="c6 c7"
      >
        title
        <i
          class="c8 c9 uc-fe-icon icon__checkbox-ed c3"
          type="checkbox-ed"
        />
      </div>
      <div
        class="c10 c11"
      >
        checkbox
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-uncontrolled 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c5 .c1 {
  line-height: 28px;
  color: #c3cad9;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  line-height: 28px;
  color: #3555f6;
}

.c6 .c1 {
  line-height: 28px;
  color: #d9d9d9;
}

.c7 .c1 {
  line-height: 24px;
  color: #c3cad9;
}

.c8 .c1 {
  line-height: 32px;
  color: #c3cad9;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox-ed c3"
        type="checkbox-ed"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        controlled
      </div>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox-ed c3"
        type="checkbox-ed"
      />
      <div
        class="uc-fe-checkbox-content c4"
      >
        uncontrolled
      </div>
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- group 1`] = `
.c12 {
  vertical-align: baseline;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c36 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c36:last-child {
  margin-right: 0;
}

.c7 .c37+.c37 {
  margin-left: -1px;
}

.c7 .c35 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c35:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c35:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c28 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c26 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c26 .c27 {
  line-height: 28px;
  color: #c3cad9;
}

.c30 .c27 {
  line-height: 28px;
  color: #3555f6;
}

.c31 .c27 {
  line-height: 28px;
  color: #d9d9d9;
}

.c32 .c27 {
  line-height: 24px;
  color: #c3cad9;
}

.c33 .c27 {
  line-height: 32px;
  color: #c3cad9;
}

.c29 {
  display: inline-block;
  vertical-align: middle;
}

.c24 .c25,
.c24 .style__CheckboxCardWrap-sc-19o5x2n-3 {
  margin-right: 8px;
}

.c24 .c25:last-child,
.c24 .style__CheckboxCardWrap-sc-19o5x2n-3:last-child {
  margin-right: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

.c34 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c34 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c34 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c34 .c17,
.c34 .c19 {
  line-height: 16px;
}

.c34 .c17 {
  padding-right: 20px;
}

.c34 .c19 {
  padding-left: 20px;
}

.c34 .c15 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c34 .c20 {
  left: 100%;
  margin-left: -19px;
}

.c34 .c22 {
  background: #9fecc0;
}

.c34 .c19 {
  display: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox c12"
              type="cbox"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox c12"
              type="cbox"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            default
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox c12"
              type="cbox"
            />
            card
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-checkbox-group c24"
        >
          <span
            class="c25 uc-fe-checkbox c26"
          >
            <i
              class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
              type="checkbox"
            />
            <div
              class="uc-fe-checkbox-content c29"
            >
              1
            </div>
          </span>
          <span
            class="c25 uc-fe-checkbox c26"
          >
            <i
              class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
              type="checkbox"
            />
            <div
              class="uc-fe-checkbox-content c29"
            >
              2
            </div>
          </span>
          <span
            class="c25 uc-fe-checkbox c26"
          >
            <i
              class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
              type="checkbox"
            />
            <div
              class="uc-fe-checkbox-content c29"
            >
              3
            </div>
          </span>
          <span
            class="c25 uc-fe-checkbox c26"
          >
            <i
              class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
              type="checkbox"
            />
            <div
              class="uc-fe-checkbox-content c29"
            >
              4
            </div>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c24"
    >
      <span
        class="c25 uc-fe-checkbox c26"
      >
        <i
          class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c29"
        >
          1
        </div>
      </span>
      <span
        class="c25 uc-fe-checkbox c26"
      >
        <i
          class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c29"
        >
          2
        </div>
      </span>
      <span
        class="c25 uc-fe-checkbox c26"
      >
        <i
          class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c29"
        >
          3
        </div>
      </span>
      <span
        class="c25 uc-fe-checkbox c26"
      >
        <i
          class="c27 uc-fe-checkbox-icon c28 uc-fe-icon icon__checkbox c12"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c29"
        >
          4
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-disabled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  line-height: 28px;
  color: #c3cad9;
}

.c8 .c3 {
  line-height: 28px;
  color: #3555f6;
}

.c7 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
  color: #bbb;
  cursor: not-allowed;
}

.c7 .c3 {
  line-height: 28px;
  color: #d9d9d9;
}

.c9 .c3 {
  line-height: 24px;
  color: #c3cad9;
}

.c10 .c3 {
  line-height: 32px;
  color: #c3cad9;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c7"
        disabled=""
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          disabled=""
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c7"
        disabled=""
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          disabled=""
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c7"
        disabled=""
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          disabled=""
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-options 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  line-height: 28px;
  color: #c3cad9;
}

.c7 .c3 {
  line-height: 28px;
  color: #3555f6;
}

.c8 .c3 {
  line-height: 28px;
  color: #d9d9d9;
}

.c9 .c3 {
  line-height: 24px;
  color: #c3cad9;
}

.c10 .c3 {
  line-height: 32px;
  color: #c3cad9;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          option-1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          option-2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          option-3
        </div>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          checkbox-1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          checkbox-2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          checkbox-3
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-size 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c7 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c7 .c3 {
  line-height: 28px;
  color: #c3cad9;
}

.c9 .c3 {
  line-height: 28px;
  color: #3555f6;
}

.c10 .c3 {
  line-height: 28px;
  color: #d9d9d9;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 24px;
  font-size: 12px;
}

.c2 .c3 {
  line-height: 24px;
  color: #c3cad9;
}

.c8 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 32px;
  font-size: 12px;
}

.c8 .c3 {
  line-height: 32px;
  color: #c3cad9;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c8"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c8"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c8"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-styleType 1`] = `
.c5 {
  vertical-align: baseline;
}

.c11 {
  padding: 16px;
  min-height: 20px;
}

.c9 {
  border-radius: 4px;
  overflow: hidden;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
}

.c9:hover {
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32),0px 1px 0px 0px rgba(223,224,241,0.7);
  border-color: transparent;
}

.c9 .c18 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c9 .c19 {
  border-radius: 50%;
  background: white;
}

.c12 .c10 {
  background: #f7f7f7;
  color: #bbb;
}

.c13 .c8 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c13 .c8:last-child {
  margin-right: 0;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  line-height: 28px;
  color: #c3cad9;
}

.c14 .c3 {
  line-height: 28px;
  color: #3555f6;
}

.c15 .c3 {
  line-height: 28px;
  color: #d9d9d9;
}

.c16 .c3 {
  line-height: 24px;
  color: #c3cad9;
}

.c17 .c3 {
  line-height: 32px;
  color: #c3cad9;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c0 .c1,
.c0 .c7 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .c7:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <div
        class="c7 c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c9"
      >
        <div
          class="c10 c11"
        >
          1
        </div>
      </div>
      <div
        class="c7 c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c9"
      >
        <div
          class="c10 c11"
        >
          2
        </div>
      </div>
      <div
        class="c7 c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c9"
      >
        <div
          class="c10 c11"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-uncontrolled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
  vertical-align: middle;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  line-height: 28px;
  color: #c3cad9;
}

.c7 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  font-size: 12px;
}

.c7 .c3 {
  line-height: 28px;
  color: #3555f6;
}

.c8 .c3 {
  line-height: 28px;
  color: #d9d9d9;
}

.c9 .c3 {
  line-height: 24px;
  color: #c3cad9;
}

.c10 .c3 {
  line-height: 32px;
  color: #c3cad9;
}

.c6 {
  display: inline-block;
  vertical-align: middle;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-3:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        checked=""
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        checked=""
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        checked=""
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          1
        </div>
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          2
        </div>
      </span>
      <span
        checked=""
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        <div
          class="uc-fe-checkbox-content c6"
        >
          3
        </div>
      </span>
    </div>
  </div>
</div>
`;
